[package]
name = "qr-gen"
version = "1.0.1"
authors = ["Tri Nguyen <tri@trinnguyen.com>"]
edition = "2018"
license = "MIT"
keywords = ["qr-code", "qr", "barcode", "qr-code-gen"]
categories = ["command-line-utilities"]
description = "CLI tool to generate QR-Code from text"
readme = "README.md"
repository = "https://github.com/trinnguyen/qr-code-cli"

[dependencies]
qrcodegen = "1.6.0"
resvg = "0.13.0"
usvg = "0.13.0"
tiny-skia = "0.3"